fix: admin report overflow ver 5

--- a/client/src/output.css
+++ b/client/src/output.css
@@ -881,40 +881,28 @@ video {
   width: 100vw;
 }
 
-.w-\[1000px\]{
-  width: 1000px;
-}
-
-.w-\[1200px\]{
-  width: 1200px;
-}
-
-.w-\[100px\]{
-  width: 100px;
-}
-
-.w-\[1100px\]{
-  width: 1100px;
-}
-
 .max-w-3xl{
   max-width: 48rem;
-}
-
-.max-w-\[1200px\]{
-  max-width: 1200px;
 }
 
 .max-w-\[700px\]{
   max-width: 700px;
 }
 
-.max-w-\[1000px\]{
-  max-width: 1000px;
+.max-w-\[00px\]{
+  max-width: 00px;
+}
+
+.max-w-\[600px\]{
+  max-width: 600px;
 }
 
 .flex-auto{
   flex: 1 1 auto;
+}
+
+.flex-1{
+  flex: 1 1 0%;
 }
 
 .flex-shrink-0{
@@ -1024,6 +1012,10 @@ video {
 
 .self-end{
   align-self: flex-end;
+}
+
+.overflow-auto{
+  overflow: auto;
 }
 
 .overflow-hidden{
@@ -1262,11 +1254,6 @@ video {
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-}
-
-.py-4{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
 }
 
 .pl-12{
